<resources>
    <string name="app_name">Mosibus</string>
    <string name="title_activity_home">Mosibus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_filter">Filter</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_activities">My Activities</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_addresses">Addresses</string>
    <string name="menu_product">Product</string>
    <string name="menu_store">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_preferences">Preferences</string>
</resources>