<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:title="@string/menu_messages"/>

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notifications"/>

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart"/>

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_activities"/>

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/menu_payment"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"/>

    </group>


    <item android:title="Logout" />
</menu>